video 10 : add images from angular

--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -54,7 +54,11 @@
 
             </div>
             <div class="col-6">
-                Image area
+                <input multiple
+                       type="file"
+                       #selectFile
+                       value="select"
+                       (change)="onFileSelected($event)">
             </div>
         </div>
 
