--- a/src/app/add-new-product/add-new-product.component.css
+++ b/src/app/add-new-product/add-new-product.component.css
@@ -14,3 +14,29 @@ mat-grid-tile {
     height: auto;
     text-align: center;
 }
+
+.dropzone {
+    height: 150px;
+    min-width: 100px;
+    display: table;
+    background-color: #eee;
+    width: 300px;
+    border: dashed 1px #aaa;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.text-wrapper {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.centered {
+    text-align: center;
+}
+
+.browse-button {
+    color: blue;
+    cursor: pointer;
+}
