--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -4,7 +4,8 @@
         <div class="row">
             <div class="col-6">
 
-                <form #productForm="ngForm" (ngSubmit)="addProduct(productForm)">
+                <form #productForm="ngForm"
+                      (ngSubmit)="addProduct(productForm)">
 
                     <mat-form-field appearance="outline"
                                     class="w-100">
@@ -21,8 +22,7 @@
                         <input matInput
                                placeholder="Product Description"
                                [(ngModel)]="product.productDescription"
-                               name="productDescription"
-                               >
+                               name="productDescription">
                     </mat-form-field>
 
                     <mat-form-field appearance="outline"
@@ -45,8 +45,10 @@
 
                     <div align="end">
                         <button mat-stroked-button
-                                color="primary" style="margin-right: 3px;">Clear</button>
-                        <button type="submit" mat-stroked-button
+                                color="primary"
+                                style="margin-right: 3px;">Clear</button>
+                        <button type="submit"
+                                mat-stroked-button
                                 color="primary">Add Product</button>
                     </div>
 
@@ -55,19 +57,37 @@
             </div>
             <div class="col-6">
                 <div>
+                    <div class="dropzone"
+                         appDrag
+                         (files)="fileDropped($event)">
+                        <div class="text-wrapper">
+                            <div class="centered">
+                                Drag and drop your file or
+                                <a (click)="selectFile.click()"
+                                   class="browse-button">browse</a>
+                                a file
+                            </div>
+
+                        </div>
+                    </div>
                     <input multiple
-                    type="file"
-                    #selectFile
-                    value="select"
-                    (change)="onFileSelected($event)">
+                           type="file"
+                           style="display: none;"
+                           #selectFile
+                           value="select"
+                           (change)="onFileSelected($event)">
                 </div>
                 <div class="mt-5">
                     <div class="row">
-                        <mat-grid-list cols="4" rowHeight="1:1">
+                        <mat-grid-list cols="4"
+                                       rowHeight="1:1">
                             <mat-grid-tile *ngFor="let file of product.productImages; let i = index;">
                                 <div style="position: relative">
-                                   <span class="btn-remove-image" (click)="removeImages(i)">x</span>
-                                    <img [src]="file.url" width="100px" height="100px">
+                                    <span class="btn-remove-image"
+                                          (click)="removeImages(i)">x</span>
+                                    <img [src]="file.url"
+                                         width="100px"
+                                         height="100px">
                                 </div>
                             </mat-grid-tile>
                         </mat-grid-list>
