--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -30,7 +30,27 @@
     <ng-container matColumnDef="Product Actual Price">
         <th mat-header-cell *matHeaderCellDef> Product Actual Price </th>
         <td mat-cell *matCellDef="let element"> {{element.productActualPrice}} </td>
-      </ng-container>
+    </ng-container>
+
+    <!-- edit button -->
+    <ng-container matColumnDef="Edit">
+      <th mat-header-cell *matHeaderCellDef> Edit </th>
+      <td mat-cell *matCellDef="let element"> 
+        <button mat-icon-button color="primary">
+          <mat-icon> edit </mat-icon>
+        </button>  
+      </td>
+    </ng-container>
+
+    <!-- delete button -->
+    <ng-container matColumnDef="Delete">
+      <th mat-header-cell *matHeaderCellDef> Delete </th>
+      <td mat-cell *matCellDef="let element"> 
+        <button mat-icon-button color="warn" (click)="deleteProduct(element.productId)">
+          <mat-icon> delete </mat-icon>
+        </button>   
+      </td>
+    </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
