--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -32,6 +32,15 @@
         <td mat-cell *matCellDef="let element"> {{element.productActualPrice}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="Images">
+      <th mat-header-cell *matHeaderCellDef> Images </th>
+      <td mat-cell *matCellDef="let element"> 
+        <button mat-icon-button color="primary" (click)="showImages(element)">
+          <mat-icon> images </mat-icon>
+        </button>    
+      </td>
+    </ng-container>
+
     <!-- edit button -->
     <ng-container matColumnDef="Edit">
       <th mat-header-cell *matHeaderCellDef> Edit </th>
