--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -45,7 +45,7 @@
     <ng-container matColumnDef="Edit">
       <th mat-header-cell *matHeaderCellDef> Edit </th>
       <td mat-cell *matCellDef="let element"> 
-        <button mat-icon-button color="primary">
+        <button mat-icon-button color="primary" (click)="editProductDetails(element.productId)">
           <mat-icon> edit </mat-icon>
         </button>  
       </td>
