video 21: designing home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,21 @@
 <div class="container mt-5">
-   <div class="card text-center" style="padding: 20px;">
-    <h1>This is Home Page</h1>
-   </div>
+   <mat-grid-list cols="4" rowHeight="3:5" gutterSize="10">
+      <mat-grid-tile *ngFor="let p of productDetails">
+         <div class="row home-page-product-image">
+            <img [src]="p.productImages[0].url" alt="">
+            <div class="mt-3">
+               <p><b>{{p.productName}}</b></p>
+            </div>
+            <div class="mt-2">
+               <p style="white-space: inherit; height: 40px; width: 288px; overflow: hidden; text-overflow: ellipsis;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sed eaque molestias iste repudiandae in quos distinctio rem excepturi expedita incidunt, doloremque id sequi perferendis ipsum. Maxime ad iste eius.</p>
+            </div>
+            <div class="mt-2">
+              <b>Rs. {{p.productDiscountedPrice}}</b> &nbsp;  <b style="text-decoration: line-through;">{{p.productActualPrice}}</b>
+            </div>
+            <div class="mt-2">
+               <button type="button" mat-raised-button color="warn">View Details</button>
+            </div>
+         </div>
+      </mat-grid-tile>
+    </mat-grid-list>
 </div>
