--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="mt-5 p-3">
 
 
 <table mat-table [dataSource]="productDetails" class="mat-elevation-z8">
@@ -16,7 +16,7 @@
     </ng-container>
   
     <!-- Weight Column -->
-    <ng-container matColumnDef="Product Description">
+    <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef> Product Description </th>
       <td mat-cell *matCellDef="let element"> {{element.productDescription}} </td>
     </ng-container>
@@ -32,35 +32,21 @@
         <td mat-cell *matCellDef="let element"> {{element.productActualPrice}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="Images">
-      <th mat-header-cell *matHeaderCellDef> Images </th>
+    <ng-container matColumnDef="Actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element"> 
         <button mat-icon-button color="primary" (click)="showImages(element)">
           <mat-icon> images </mat-icon>
         </button>    
-      </td>
-    </ng-container>
-
-    <!-- edit button -->
-    <ng-container matColumnDef="Edit">
-      <th mat-header-cell *matHeaderCellDef> Edit </th>
-      <td mat-cell *matCellDef="let element"> 
         <button mat-icon-button color="primary" (click)="editProductDetails(element.productId)">
           <mat-icon> edit </mat-icon>
-        </button>  
+        </button>
+        <button mat-icon-button color="warn" (click)="deleteProduct(element.productId)">
+          <mat-icon> delete </mat-icon>
+        </button> 
       </td>
     </ng-container>
 
-    <!-- delete button -->
-    <ng-container matColumnDef="Delete">
-      <th mat-header-cell *matHeaderCellDef> Delete </th>
-      <td mat-cell *matCellDef="let element"> 
-        <button mat-icon-button color="warn" (click)="deleteProduct(element.productId)">
-          <mat-icon> delete </mat-icon>
-        </button>   
-      </td>
-    </ng-container>
-  
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
