--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,9 +3,18 @@ mat-grid-tile {
     border-radius: 5px;
 }
 
+.image-container {
+    position: relative;
+    height: 300px;
+}
+
 .home-page-product-image {
     max-width: 90%;
     max-height: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
