Video 28: Bill generation

--- a/src/app/buy-product/buy-product.component.html
+++ b/src/app/buy-product/buy-product.component.html
@@ -49,9 +49,44 @@
 
             </div>
             <div class="col-6">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus ex quos autem natus quo minus
-                recusandae doloribus cupiditate a officia, illo beatae quae odit accusantium velit nemo enim ipsum
-                dicta.
+                <table class="table">
+                    <thead class="thead">
+                        <tr>
+                            <th>Name</th>
+                            <th>Amount</th>
+                            <th>Quantity</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody">
+                        <tr *ngFor="let product of productDetails">
+                            <td>{{product.productName}}</td>
+                            <td>{{product.productDiscountedPrice}}</td>
+                            <td>
+                                <select 
+                                #quantity
+                                class="form-select"
+                                [ngModel]="getQuantityForProduct(product.productId)"
+                                (change)="onQuantityChanged(quantity.value, product.productId)"
+                                >
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                </select>
+                            </td>
+                            <td>
+                                {{getCalculatedTotal(product.productId, product.productDiscountedPrice)}}
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>Total</td>
+                            <td> {{getCalculatedGrandTotal()}} </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
