Video 33 :Adding register user functionality

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,5 +25,12 @@
 
             <button class="w-100" type="submit" mat-raised-button color="primary">Login</button>
         </form>
+
+        
     </div>
+    <div class="text-center">
+        <br>
+        <button class="w-20" mat-raised-button type="button" (click)="registerUser()">Create an account</button>
+    </div>
+        
 </div>
