Video 35, 36 :Implementing pagination in angular

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,4 +20,12 @@
          </div>
       </mat-grid-tile>
     </mat-grid-list>
+
+    <div class="text-center mt-5" style="padding-bottom: 100px;" *ngIf="showLoadButton">
+      <button type="button" mat-raised-button color="primary" (click)="loadMoreProduct()"> Load more</button>
+    </div>
+
+    <div class="mt-5" >
+         
+    </div>
 </div>
