Video 38: adding search bar on home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,16 @@
 <div class="container mt-5">
+
+   <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Search any product</mat-label>
+      <input matInput
+             #searchKey
+             (keyup)="searchProduct(searchKey.value)"
+             name="searchKey"
+             id="searchKey"
+             placeholder="Search any product">
+      <mat-hint>Search any product</mat-hint>
+  </mat-form-field>
+
    <mat-grid-list cols="4" rowHeight="3:5" gutterSize="10">
       <mat-grid-tile *ngFor="let p of productDetails">
          <div class="row p-5">
