Video 41: adding product to cart

--- a/src/app/product-view-details/product-view-details.component.html
+++ b/src/app/product-view-details/product-view-details.component.html
@@ -30,6 +30,8 @@
                 </div>
                 <div class="mt-5 text-center">
                     <button mat-raised-button color="warn" style="width: 200px;" (click)="buyProduct(product.productId)"> Buy Now</button>
+                    &nbsp;
+                    <button mat-raised-button style="width: 200px;" (click)="addToCart(product.productId)">Add to Cart</button>
                 </div>
             </div>
         </div>
