Video 44, 45, 46 :Checking out the cart

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,7 @@
 <div class="container mt-5">
+    <div align="right" class="mb-3">
+        <button (click)="checkout()" color="primary" mat-raised-button>Checkout</button>
+    </div>
     <table mat-table
            [dataSource]="cartDetails"
            class="mat-elevation-z8">
