--- a/src/app/buy-product/buy-product.component.html
+++ b/src/app/buy-product/buy-product.component.html
@@ -4,7 +4,7 @@
             <div class="col-6">
 
                 <form #orderForm="ngForm"
-                      (ngSubmit)="placeOrder(orderForm)">
+                      (ngSubmit)="createTransactionAndPlaceOrder(orderForm)">
 
                     <mat-form-field appearance="outline"
                                     class="w-100">
